fix some layout and alignment issues with single column page and list elements not matching Figma (at all)

--- a/src/css/sass/_layouts-main.scss
+++ b/src/css/sass/_layouts-main.scss
@@ -98,6 +98,7 @@
 /* Update position list element */
 main ul li {
   list-style-position: outside;
+  margin-left: 32px;
 }
 
 @media only screen and (max-width: 992px) {
